--- a/cs04.html
+++ b/cs04.html
@@ -320,12 +320,17 @@ div.tocify {
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
 <p>Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control, and (2) to predict the outcomes of all NC Congressional elections (the 13 federal Representatives to Congress), including characterization of uncertainty in predictions.</p>
+<p>We will present predictions weekly, and the final case study grading criteria will include some determined by the class. In addition, prizes will be given in a number of categories (e.g., most creative useful data source).</p>
 </div>
-<div id="data-coming-soon" class="section level1">
-<h1>Data (coming soon)</h1>
+<div id="data" class="section level1">
+<h1>Data</h1>
+<ul>
+<li><a href="decks/data/gay_marriage_megapoll.dta">gay_marriage_megapoll.dta</a></li>
+</ul>
 <!---
 
-+ NC voter files at https://dl.ncsbe.gov/?prefix=data/
++ [NC voter files](https://dl.ncsbe.gov/?prefix=data/)
++ [Other NC voter data](https://www.ncsbe.gov/data-stats/other-election-related-data)
 + Cooperative Congressional Election Study https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study 
 
 --->
@@ -353,21 +358,25 @@ div.tocify {
 <li><a href="http://www.thedrive.com/news/16712/trump-supporting-towns-more-likely-to-be-filled-with-pickup-trucks-study-claims">Pickup Trucks and Voting</a></li>
 </ul>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
+<div id="slides" class="section level1">
+<h1>Slides</h1>
+<ul>
+<li><a href="decks/cs04_1_deck.html">Basics of Election Prediction</a></li>
+<li><a href="decks/cs04_2_deck.html">Poststratification and Weighting</a></li>
+</ul>
 <!---
-[Basics of Election Prediction](decks/cs04_1_deck.html)
 
-[MRP Tutorial](decks/cs04_2_deck.html)
+[MRP Tutorial](decks/cs04_3_deck.html)
 
 --->
 </div>
 <div id="prizes" class="section level1">
 <h1>Prizes</h1>
-<p>Prediction prizes will be awarded in the following categories:</p>
+<p>Prizes will be awarded in the following categories:</p>
 <ol style="list-style-type: decimal">
-<li>best prediction</li>
-<li>most creative data source</li>
+<li>best prediction (we will define “best”)</li>
+<li>most creative data source useful for prediction (e.g., Yeti sales, number of nail salons per capita, tweets)</li>
+<li>best visualization</li>
 </ol>
 </div>
 
