fixed notes typo cs03_r

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ div.tocify {
 <tr class="odd">
 <td>October 3</td>
 <td>CS3: Generalized Linear Multilevel Models</td>
-<td>CS3 Interim Report: Infant Mortality Visualization</td>
+<td>CS3 Interim Report 1: Infant Mortality Visualization</td>
 </tr>
 <tr class="even">
 <td>October 5</td>
@@ -429,7 +429,7 @@ div.tocify {
 <tr class="odd">
 <td>October 10</td>
 <td>CS4: Election Forecasting with “Mr. P”</td>
-<td>CS3 Interim Report: County-Specific Mortality by Group</td>
+<td>CS3 Interim Report 2: 2015 County-Specific Mortality by Race</td>
 </tr>
 <tr class="even">
 <td>October 12</td>
