red state edits

--- a/decks/cs03_5_deck.html
+++ b/decks/cs03_5_deck.html
@@ -466,7 +466,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Recently, the perception has changed to that of a party representing liberal elites</li>
 <li>Patterns are complex
 <ul>
-<li>In recent presidential election, Democrats have done better in the richer states in the Northeast and West (often colored blue on electoral maps); Republicans have dominated the poorer “red states” in the South</li>
+<li>In recent presidential elections, Democrats have done better in the richer states in the Northeast and West (often colored blue on electoral maps); Republicans have dominated the poorer “red states” in the South</li>
 <li>Based on census and opinion poll data, we see that higher-income voters continue to support Repbulicans in presidential elections</li>
 </ul></li>
 <li>How do we reconcile these seemingly conflicting patterns? We review the case study by <a href="https://5harad.com/mse331/papers/gelman_et_al_rich_poor.pdf">Gelman et al</a> to see.</li>
