--- a/cs03.html
+++ b/cs03.html
@@ -336,7 +336,11 @@ div.tocify {
 <div id="resources" class="section level1">
 <h1>Resources</h1>
 <p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill (Chapters 12-15 in particular)</p>
-<p><a href="NCinfantmortalityrates.pdf">2015 NC Infant Mortality Rates, from NC State Center for Health Statistics</a></p>
+<ul>
+<li><a href="NCinfantmortalityrates.pdf">2015 NC Infant Mortality Rates, from NC State Center for Health Statistics</a></li>
+<li><a href="https://cran.r-project.org/web/packages/brms/vignettes/brms_nonlinear.html">Model Fit in BRMS</a></li>
+<li><a href="https://mjskay.github.io/tidybayes/articles/tidy-brms.html">All About Extracting Samples from BRMS</a></li>
+</ul>
 </div>
 <div id="slides" class="section level1">
 <h1>Slides</h1>
