--- a/index.html
+++ b/index.html
@@ -433,12 +433,12 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>October 12</td>
-<td>Lab: Multilevel Models for CS3 and CS4</td>
+<td>Lab: Multilevel Models for CS3</td>
 <td>CS4 Election Predictions</td>
 </tr>
 <tr class="odd">
 <td>October 17</td>
-<td>CS4: Who Votes in NC?</td>
+<td>Lab: Who Votes in NC?</td>
 <td>CS3 Final Report: Infant Mortality Trends</td>
 </tr>
 <tr class="even">
