--- a/cs04.html
+++ b/cs04.html
@@ -329,6 +329,7 @@ div.tocify {
 <li><a href="https://dl.ncsbe.gov/?prefix=data/">NC voter files</a></li>
 <li><a href="https://www.ncsbe.gov/data-stats/other-election-related-data">Other NC voter data</a></li>
 <li><a href="https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study">Cooperative Congressional Election Study</a> - <a href="https://opportunityinsights.org/data/?geographic_level=0&amp;topic=0&amp;paper_id=0#resource-listing">Opportunity Insights Data Library</a></li>
+<li>See also data on Sakai under Resources</li>
 </ul>
 </div>
 <div id="reports" class="section level1">
