--- a/index.html
+++ b/index.html
@@ -439,12 +439,12 @@ div.tocify {
 <tr class="odd">
 <td>October 17</td>
 <td>Lab: Who Votes in NC?</td>
-<td>CS3 Final Report: Infant Mortality Trends</td>
+<td></td>
 </tr>
 <tr class="even">
 <td>October 19</td>
 <td>CS4: Election Modeling Workshop</td>
-<td>CS4 Election Predictions Update</td>
+<td>CS3 Final Report: Infant Mortality Trends and CS4 Election Predictions Update</td>
 </tr>
 <tr class="odd">
 <td>October 24</td>
