--- a/cs04.html
+++ b/cs04.html
@@ -329,7 +329,7 @@ div.tocify {
 <li><a href="https://dl.ncsbe.gov/?prefix=data/">NC voter files</a></li>
 <li><a href="https://www.ncsbe.gov/data-stats/other-election-related-data">Other NC voter data</a></li>
 <li><a href="https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study">Cooperative Congressional Election Study</a> - <a href="https://opportunityinsights.org/data/?geographic_level=0&amp;topic=0&amp;paper_id=0#resource-listing">Opportunity Insights Data Library</a></li>
-<li>See also data on Sakai under Resources in the CS4 folder</li>
+<li>See data on Sakai under Resources in the CS4 folder for 2010 Census summary data and 2016 voting data in NC</li>
 </ul>
 </div>
 <div id="reports" class="section level1">
@@ -344,6 +344,7 @@ div.tocify {
 <div id="resources" class="section level1">
 <h1>Resources</h1>
 <ul>
+<li><a href="https://www.datacamp.com/community/blog/election-forecasting-polling">Andy Gelman Interview on Election Forecasting</a></li>
 <li><a href="https://www.270towin.com/2018-house-election/">Who is running for office, and which districts are viewed as competitive?</a></li>
 <li><a href="https://www.newsobserver.com/news/politics-government/article216882230.html">Nate Silver says this is going to be easy!</a></li>
 <li><a href="http://thisisstatistics.org/demystifying-the-election-prediction-2016-contest/">ASA 2016 Election Contest</a></li>
