--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title></title>
+<title>STA 440: Case Studies in the Practice of Statistics</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function ()  {
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
     };
-    options.showAndHide = true;
+    options.showAndHide = false;
     options.smoothScroll = true;
 
     // tocify
@@ -235,6 +235,12 @@ div.tocify {
   border-radius: 0px;
 }
 
+.tocify-subheader {
+  display: inline;
+}
+.tocify-subheader .tocify-item {
+  font-size: 0.95em;
+}
 
 </style>
 
@@ -298,10 +304,13 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">STA 440: Case Studies in the Practice of Statistics</h1>
 
 </div>
 
 
+<p>amat— title: &quot; &quot; output: html_document: toc_float: true</p>
+<hr />
 <div id="welcome-to-sta440" class="section level1">
 <h1>Welcome to STA440!</h1>
 <div id="class-meetings" class="section level3">
