tues pm reschedule after election fiasco

--- a/index.html
+++ b/index.html
@@ -448,13 +448,13 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td>October 24</td>
-<td>CS4: Group Presentations: Who Votes in NC?</td>
-<td>CS4 Interim Report: Who Votes in NC?</td>
+<td>CS4: Remodeling After Disaster Strikes!</td>
+<td></td>
 </tr>
 <tr class="even">
 <td>October 26</td>
-<td>Individual CS: Web Scraping</td>
-<td>CS4 Election Predictions Update</td>
+<td>CS4: Group Presentations: Who Votes in NC?</td>
+<td>CS4 Interim Report: Who Votes in NC? and CS4 Election Predictions Update</td>
 </tr>
 <tr class="odd">
 <td>October 31</td>
@@ -463,7 +463,7 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>November 2</td>
-<td>Individual CS: Web Scraping Work in Groups</td>
+<td>Individual CS: Web Scraping</td>
 <td>CS4 Election Predictions Update; CS4 Final Report Due by Midnight Nov 5</td>
 </tr>
 <tr class="odd">
