--- a/cs_indiv.html
+++ b/cs_indiv.html
@@ -341,8 +341,8 @@ div.tocify {
 <h1>Resources</h1>
 <p>Nolan and Temple Lang, Chapter 12 (some of this chapter is now outdated)</p>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
+<div id="slides" class="section level1">
+<h1>Slides</h1>
 <p><a href="decks/cs06_1_deck.html">Web Scraping</a> <!---
 [Web Scraping and Analysis: Jiurui based on 12.4-12.9](decks/cs_indiv_3_deck.html)
 
