--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ div.tocify {
 <td>Individual CS Interim Report: Introduction and Analysis Plan</td>
 </tr>
 <tr class="odd">
-<td>Movember 14</td>
+<td>November 14</td>
 <td>CS5: Survival Analysis</td>
 <td></td>
 </tr>
