draft individ and final dates updated

--- a/index.html
+++ b/index.html
@@ -499,17 +499,17 @@ div.tocify {
 <tr class="odd">
 <td>December 5</td>
 <td>Individual Presentations</td>
-<td>Individual Reports Due</td>
+<td>Individual Reports Due (Draft)</td>
 </tr>
 <tr class="even">
 <td>December 7</td>
 <td>Individual Presentations</td>
-<td>Individual Reports Due</td>
+<td>Individual Reports Due (Draft)</td>
 </tr>
 <tr class="odd">
 <td>December 13, 2-5pm</td>
 <td>Individual Presentations</td>
-<td>Individual Reports Due</td>
+<td>Individual Reports Due (Final with any changes from draft highlighted)</td>
 </tr>
 </tbody>
 </table>
