--- a/cs_indiv.html
+++ b/cs_indiv.html
@@ -343,10 +343,10 @@ div.tocify {
 </div>
 <div id="slides" class="section level1">
 <h1>Slides</h1>
-<p><a href="decks/cs06_1_deck.html">Web Scraping</a> <!---
-[Web Scraping and Analysis: Jiurui based on 12.4-12.9](decks/cs_indiv_3_deck.html)
-
----></p>
+<p><a href="decks/cs06_1_deck.html">Web Scraping</a></p>
+<p><a href="decks/cs06_1_dplyr.html">Web Scraping - dplyr</a></p>
+<p><a href="decks/cs06_2_deck.html">Web Scraping Generalizations</a></p>
+<p><a href="decks/cs06_2_dplyr.html">Web Scraping Generalizations - dplyr</a></p>
 </div>
 
 
