survival first three sets

--- a/cs05.html
+++ b/cs05.html
@@ -333,23 +333,21 @@ div.tocify {
 <div id="reports" class="section level1">
 <h1>Reports</h1>
 <ul>
-<li>Interim report 1: investigate patterns of missing data and comment on potential for bias in analysis results in a report not to exceed 3 pages. Reproducible code should be provided in an appendix.</li>
-<li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing survival as a function of predictor variables of interest. Reproducible code should be provided in an appendix.</li>
+<li><p>Interim report: Produce a 5 page (maximum) report in R markdown that explores the missing data patterns and mechanisms to the extent possible based on the data provided. Comment on the potential for missing data to bias analysis results.</p></li>
+<li><p>Final report: Produce a 5 page (maximum) report in R markdown that explores factors related to survival in this cohort. Your analysis should account for missing data in a principled manner designed to limit potential bias in results.</p></li>
 </ul>
 </div>
-<div id="resources-coming-soon" class="section level1">
-<h1>Resources (coming soon)</h1>
+<div id="resources" class="section level1">
+<h1>Resources</h1>
+<p>-For more on missing data, check out <a href="https://trinity.capture.duke.edu/Panopto/Pages/Sessions/List.aspx?folderID=2952f554-d9c8-4749-b8c4-a949013da84e">Michael Akande’s talk (dated 11/5)</a></p>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
-<!---
-[Duke Databank for Cardiovascular Disease](decks/cs05_1_deck.html)
+<div id="slides" class="section level1">
+<h1>Slides</h1>
+<p><a href="decks/cs05_1_deck.html">Duke Databank for Cardiovascular Disease</a></p>
+<p><a href="decks/cs05_2_deck.html">Missing Data Tutorial</a></p>
+<p><a href="decks/cs05_3_deck.html">Survival analysis tutorial</a></p>
+<!--- Missing data in survival; how to handle?
 
-
-[Missing data Tutorial: Jiurui](decks/cs05_2_deck.html)
-
-
-[Survival analysis tutorial: Jiurui ](decks/cs05_3_deck.html)
 --->
 </div>
 
