--- a/cs05.html
+++ b/cs05.html
@@ -321,14 +321,9 @@ div.tocify {
 <h1>Case Study Goals</h1>
 <p>Based on data from the Duke Databank for Cardiovascular Diseases, we will explore biological and sociodemographic factors related to survival. The goal is to describe both modifiable and non-modifiable risk factors for death, accounting as much as possible for potential biases due to missing data.</p>
 </div>
-<div id="data-coming-soon" class="section level1">
-<h1>Data (coming soon)</h1>
-<!---
--Jiurui post data on Sakai with data dictionary linked here; variables to include in dataset include the following:  AGE_G, GENDER, RACE_G, YRCATH_G, CHFSEV, HXCEREB, HXCHF, HXCOPD, HXDIAB, HXHTN, HXMI, HXHYL, HXSMOKE, HEIGHT_R, WEIGHT_R, (calculate BMI from height and weight),  S3, LMST, LVEF_R, NUMDZV, DEATH, DAYS2LKA
--Jiurui let me know % with missing data for each variable. Also subset to one observation per person (repeat events are included, but there should be only one death)
--NOtes: look at race by gender interaction, 
-- outcome should be time to death. Have Jiurui construct this bearing in mind the censoring variable
---->
+<div id="data" class="section level1">
+<h1>Data</h1>
+<p>The Duke data are available on Sakai. Please do not distribute these data beyond the class.</p>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
@@ -346,9 +341,7 @@ div.tocify {
 <p><a href="decks/cs05_1_deck.html">Duke Databank for Cardiovascular Disease</a></p>
 <p><a href="decks/cs05_2_deck.html">Missing Data Tutorial</a></p>
 <p><a href="decks/cs05_3_deck.html">Survival analysis tutorial</a></p>
-<!--- Missing data in survival; how to handle?
-
---->
+<p><a href="decks/cs05_4_deck.html">Survival with missing data</a></p>
 </div>
 
 
