--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@ div.tocify {
 <li>
   <a href="cs_indiv.html">Individual Case Study</a>
 </li>
+<li>
+  <a href="fishy.html">Something is fishy</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
