fishy II due date added

--- a/fishy.html
+++ b/fishy.html
@@ -346,6 +346,7 @@ div.tocify {
 <div id="report" class="section level1">
 <h1>Report</h1>
 <p>The report itself should be structured with an introduction, description of methods, results, and discussion. All code should be fully reproducible. Use of informative graphics is strongly encouraged; graphics should be easily accessible without having to point separately to data, and any graphics or snapshots of them should be included in the final report as well.</p>
+<p>Reports will be due no later than Friday, December 7, at the beginning of class.</p>
 </div>
 <div id="resources" class="section level1">
 <h1>Resources</h1>
