--- a/fishy.html
+++ b/fishy.html
@@ -321,7 +321,7 @@ div.tocify {
 <h1>Learning Objectives</h1>
 <ul>
 <li><p>gain experience modeling data independently of any team members</p></li>
-<li><p>note this is an INDIVIDUAL case study, and any discussion of the project with others while you are working on it will be considered a violation of the honor code. Absolutely no consultation with others is permitted.</p></li>
+<li><p>note this is an INDIVIDUAL case study, and any discussion of the project with others while you are working on it will be considered a violation of the Duke Community Standard. Absolutely no consultation with others is permitted.</p></li>
 </ul>
 </div>
 <div id="case-study-goals" class="section level1">
