--- a/cs05.html
+++ b/cs05.html
@@ -292,6 +292,9 @@ div.tocify {
 <li>
   <a href="cs_indiv.html">Individual Case Study</a>
 </li>
+<li>
+  <a href="fishy.html">Something is fishy</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
