fixing wingdings in survival notation

--- a/decks/cs05_3_deck.html
+++ b/decks/cs05_3_deck.html
@@ -616,7 +616,7 @@ Survival of Children in Burkina Faso by Vaccination Status
 </section>
 <section id="kaplan-meier-estimate" class="slide level2 smaller">
 <h2>Kaplan-Meier Estimate</h2>
-<p>Perhaps the most popular estimate of a survival curve is the <em>Kaplan-Meier</em> or <em>product-limit</em> estimate. This method is actually fairly intuitive.</p>
+<p>Perhaps the most popular estimate of a survival curve is the <em>Kaplan-Meier</em> or <em>product-limit</em> estimate. This method is fairly intuitive.</p>
 <p>First, define the following quantities.</p>
 <ul>
 <li><span class="math inline">\(I_t\)</span>: # at risk of failure at time <span class="math inline">\(t\)</span> (i.e., those who did not fail before <span class="math inline">\(t\)</span> and those who were not censored before <span class="math inline">\(t\)</span>)</li>
