--- a/decks/cs05_1_deck.html
+++ b/decks/cs05_1_deck.html
@@ -502,7 +502,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section>
 <section id="case-study-data-3" class="slide level2">
 <h2>Case Study Data</h2>
-<p>The outcome of survival time is defined by two variables: whether death occurred (DEATH) and the time to either death or the end of follow-up (DAYS2LKA).</p>
+<p>The outcome of survival time is defined by two variables: a censoring indicator (DEATH=1 if death observed and DEATH=0 if censored before death) and the time to either death or the end of follow-up (DAYS2LKA).</p>
 </section>
 <section id="case-study-goals" class="slide level2">
 <h2>Case Study Goals</h2>
